# lynkc

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: frontend-lint.yml  rust-lint.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: channel.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/app/: handlers.rs  mod.rs
docs/: ARCHITECTURE.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  next.config.js  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @babel.js  @radix-ui.js  @swc.js  class-variance-authority.js  clsx.js  lucide-react.js  next.js  tailwind-merge.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/chunks/app/: layout.js  page.js
frontend/.next/static/css/app/: layout.css
frontend/.next/static/webpack/: webpack.b9772a0015115f52.hot-update.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/ui/: card.tsx  textarea.tsx
frontend/lib/: api.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/features/channel/: ChannelPad.tsx  ChannelShell.tsx  ChannelSidebar.tsx  HistoryPanel.tsx  RemotePanel.tsx  hooks.ts
frontend/src/lib/: api.ts  files.ts  utils.ts
(+1 files in other folders)
